msm8226-common: CMActions: Use Preference Fragments
PreferenceActivity.addPreferencesFromResource() is deprecated.

Change-Id: Iff77d74341c7f9b5425172ce520055f1434b82c1

--- a/CMActions/AndroidManifest.xml
+++ b/CMActions/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </service>
 
         <activity
-            android:name=".GestureSettings"
+            android:name=".GesturePreferenceActivity"
             android:label="@string/screen_gestures_panel_title"
             android:theme="@android:style/Theme.Material.Settings">
             <intent-filter>
